--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@wangeditor/editor-for-vue": "^1.0.2",
     "axios": "^1.6.8",
     "core-js": "^3.8.3",
     "echarts": "^5.5.0",
